style/partials/_general.scss
/* General */
@use "config";

html {
  height: 100%;
  margin: 0;
  width: 100%;
  overflow-x: hidden;
}

body {
  font-family: config.$font-stack;
  overflow-x: hidden;
  background-image: url("/img/background.jpg");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  display: flex;
  width: 100%;
  flex-direction: column;
}

#page-container {
  position: relative;
  min-height: 100vh;
  opacity: 0;
  transition: opacity 0.15s;
}

#content-wrap {
  padding-bottom: 15rem;

  /* Footer height */
}

a {
  &:hover {
    text-decoration: none;
  }

  color: black;
  word-wrap: break-word;
}

.close {
  color: white;
  -webkit-text-stroke: 1px black;
  -webkit-text-fill-color: white;
  opacity: 0.5;
  position: absolute;
  z-index: 5;
  right: 1px;
}

.modal-xlg .row {
  display: flexbox;
  display: flex;
  flex-wrap: wrap;
  margin-right: 0;
  margin-left: 0;
}

.card-footer p {
  color: black;
  margin-bottom: 0;
}

